# FrameworkBenchmarks

frameworks/Rust/may-minihttp/: Cargo.toml
frameworks/Rust/may-minihttp/src/: main.rs
