[package]
name = "may-minihttp"
version = "0.1.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]

[dependencies]
url = "1.7"
rand = "0.4"
serde = "1.0"
num_cpus = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
may = { git = "https://github.com/Xudong-Huang/may" }
postgres = { git = "https://github.com/Xudong-Huang/rust-postgres" }
may_minihttp = { git = "https://github.com/Xudong-Huang/may_minihttp" }
